# nesrender

./: .gitignore  CMakeLists.txt  LICENSE  NOTICE  brick.cc  brick.xcf  chr.c  chr.s  debug.h  draw.cc  draw.h  draw.s  draw_column.s  frame-buffer.s  framebuffer-constants.h  framebuffer.S  framebuffer.cc  framebuffer.h  gen-chr.py  gen-log.py  gen-lsin.py  gen-qs.py  gen-sin.py  lcos.c  line.cc  link.ld  log.cc  log.h  log.py  log.s  log8.py  log_fast.py  logo.cc  logo.h  logt.c  main.c  main.cc  main2.cc  map.cc  map.h  (+40 more)
trace/: trace.py
